# dapt

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
assets/: README.md
dapt/: Cargo.toml  README.md
dapt/src/: events.rs  types.rs
dapts/: Cargo.toml  README.md
dapts/src/: event.rs  events.rs  lib.rs  requests.rs  types.rs
generator/: Cargo.toml
generator/src/: case.rs  main.rs
