[package]
name = "dapt"
version = "0.1.0"
description = "Debug Adapter Protocol (DAP) types made easy."
authors = ["Myriad Dreamin"]
repository = "https://github.com/Myriad-Dreamin/dapt"
license = "MIT"
edition = "2021"
keywords = ["dap"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
