[package]
name = "dapts"
version = "0.0.4"
description = "Debug Adapter Protocol (DAP) types made easy."
authors = ["Myriad Dreamin"]
repository = "https://github.com/Myriad-Dreamin/dapts"
license = "MIT"
edition = "2021"
keywords = ["dap"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
